--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "express": "^4.17.1",
     "helmet": "^3.21.1",
     "knex": "^0.20.7",
-    "mocha": "^7.0.0",
     "morgan": "^1.9.1",
     "pg": "^7.17.0",
     "postgrator": "^3.11.0",
     "t": "^0.5.1"
   },
   "devDependencies": {
-    "postgrator-cli": "^3.2.0"
+    "chai": "^4.2.0",
+    "mocha": "^7.0.0",
+    "postgrator-cli": "^3.2.0",
+    "supertest": "^4.0.2"
   }
 }
