--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.7",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.2",
     "pg": "^7.17.0",
     "postgrator": "^3.11.0",
     "t": "^0.5.1"
