--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "dropTestTables": "psql -U postgres -d bookmark-capstone-test -f ./seeds/drop.tables.sql",
-    "seed": "psql -U postgres -d bookmark-capstone-test -f ./seeds/seed.bookmark_tables.sql"
+    "seed": "psql -U postgres -d bookmark-capstone-test -f ./seeds/seed.bookmark_tables.sql",
+    "truncate": "psql -U postgres -d bookmark-capstone-test -f ./seeds/truncate.bookmark_tables.sql"
   },
   "keywords": [],
   "engines": {
