--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
+    "predeploy": "npm audit && npm run migrate:production",
     "deploy": "git push heroku master",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "dropTestTables": "psql -U postgres -d bookmark-capstone-test -f ./seeds/drop.tables.sql",
     "seed": "psql -U postgres -d bookmark-capstone-test -f ./seeds/seed.bookmark_tables.sql",
     "truncate": "psql -U postgres -d bookmark-capstone-test -f ./seeds/truncate.bookmark_tables.sql",
-    "seedTables": "psql -U postgres -d bookmark-capstone -f ./seeds/seed.bookmark_tables.sql"
+    "seedTables": "psql -U postgres -d bookmark-capstone -f ./seeds/seed.bookmark_tables.sql",
+    "migrate:production": "env DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate"
   },
   "keywords": [],
   "engines": {
